# fivetwo

./: LICENSE  README.md  pyproject.toml
notebooks/: shuffling_cards.ipynb
src/: calculate_statistics.py  deck.py  shuffler.py  shuffling.py  shuffling_cards.ipynb
src/fivetwo/: shuffler.py  stats.py
tests/: test_deck.py  test_shuffler.py  test_stats.py
